[package]
name = "herlin-web"
version = "0.1.0"
authors = ["Alexander Herlin <alexander.herlin@outlook.com>"]
edition = "2018"
repository = "https://github.com/Herlix/herlin-web"
homepage = "https://github.com/Herlix/herlin-web"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A simple website for a Rust pressentation"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stdweb = "0.4.20"
yew = { version = "0.15", features = ["web_sys"] }
yew-router="0.12.1"
serde = { version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
log = "0.4"
web_logger = "0.2"
wasm-bindgen = "0.2.60"
strum = "0.18.0"
strum_macros = "0.18.0"
failure = "0.1.7"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.10"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"